# AutomatedGuidedVehicle

./: CMakeLists.txt  prj.conf
src/: main.c
